# replication-template

./: .gitignore  Dockerfile  Dockerfile-python-poetry  LICENSE  Makefile  README.md  Snakefile  config.yml  pyproject.toml
basic/: Dockerfile  Makefile
basic/input/code/: test.R
basic/input/data/: raw_data.rds
basic/output/tables/: processed_data.rds
code/: progressr.R
outdated/: READ.md
output/slides/: slide.fls  slide.out  slide.snm
paper/: main.aux  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
slide/: slide.aux  slide.fdb_latexmk  slide.fls  slide.nav  slide.out  slide.tex  slide.toc
trash/: example.bash
