[tool.poetry]
name = "replication-template"
version = "0.1.0"
description = "Replication Template"
authors = ["Hyoungchul Kim"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.12"
pandas = "1.3.3"
matplotlib = "3.4.3"
statsmodels = "0.12.2"
seaborn = "0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core=1.0.0"]
build-backend = "poetry.core.masonry.api"
